--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DOBBERKAU ENERGIE by G.U.T</title>
+        <title>Celle Job</title>
         <link href="./assets/app/images/favicon.png" rel="icon" type="image/png" />
         <link rel="stylesheet" href="./assets/vendors/swiper@11.1.0/swiper-bundle.min.css">
 		<link rel="stylesheet" href="./assets/app/css/style.css" />
@@ -16,7 +16,7 @@
                     <nav class="flex items-center justify-between bg-blue-1000 py-3 px-4 rounded-lg rounded-br-none shadow-lg gap-x-1 sm:gap-x-2 md:gap-x-4" aria-label="Global">
                         <div class="flex lg:flex-1">
                             <a href="#" class="-m-1.5 p-1.5">
-                                <span class="sr-only">DOBBERKAU ENERGIE by G.U.T</span>
+                                <span class="sr-only">Celle Job</span>
                                 <img class="h-8 sm:h-9 md:h-10 lg:h-[3.2rem] w-auto object-contain" src="./assets/app/images/logo-header.png" alt="DOBBERKAU ENERGIE">
                             </a>
                         </div>
