--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
                 </section>
                 <!-- Main -->
                 <section>
-                    <div class="container pt-0 md:pt-8 lg:pt-14 pb-20 lg:pb-28">
+                    <div class="container pt-0 md:pt-8 pb-20 lg:pb-28">
                         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                             <div class="col-span-2 flex flex-col gap-8">
                                 <div class="p-2 flex-1 flex flex-col gap-6 pt-4 col-span-2">
