--- a/src/index.html
+++ b/src/index.html
@@ -140,15 +140,12 @@
                 <!-- Logo -->
                 <section>
                     <div class="py-12">
-                        <h2 class="text-center text-base lg:text-lg font-semibold leading-8 text-gray-900 mb-6">
-                            Top-Arbeitgeber in Celle
-                        </h2>
                         <div class="mx-auto max-w-lg sm:max-w-xl lg:mx-0 lg:max-w-none px-6">
                             <div class="swiper logo-slider">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/akhcelle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -157,7 +154,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/barilla-celle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -166,7 +163,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/cellerbrunnenbau-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -175,7 +172,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/dhl-celle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -184,7 +181,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/dLogo-1-uai-258x143.jpg"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -193,7 +190,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/stadtcelle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -202,7 +199,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/svocelle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -211,7 +208,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/volksbanksila-uai-258x143.jpg"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -220,7 +217,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/zimmermann-celle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -705,15 +702,12 @@
                 <!-- Logo -->
                 <section>
                     <div class="py-12">
-                        <h2 class="text-center text-base lg:text-lg font-semibold leading-8 text-gray-900 mb-6">
-                            Top-Arbeitgeber in Celle
-                        </h2>
                         <div class="mx-auto max-w-lg sm:max-w-xl lg:mx-0 lg:max-w-none px-6">
                             <div class="swiper logo-slider">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/akhcelle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -722,7 +716,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/barilla-celle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -731,7 +725,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/cellerbrunnenbau-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -740,7 +734,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/dhl-celle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -749,7 +743,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/dLogo-1-uai-258x143.jpg"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -758,7 +752,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/stadtcelle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -767,7 +761,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/svocelle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -776,7 +770,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/volksbanksila-uai-258x143.jpg"
                                             alt="Partnerunternehmen"
                                             width="258"
@@ -785,7 +779,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <img
-                                            class="max-h-16 md:max-h-20 lg:max-h-24 w-full object-contain"
+                                            class="max-h-16 md:max-h-20 w-full object-contain"
                                             src="./assets/app/images/logo/zimmermann-celle-uai-258x147.png"
                                             alt="Partnerunternehmen"
                                             width="258"
