--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div style="background-image: url('./assets/app/images/cellejobsbg.png');" class="hero-bg bg-[length:auto_1500px] bg-center md:bg-[length:auto_2000px] md:bg-center xl:bg-[length:auto_2600px] xl:bg-center bg-no-repeat z-20 absolute inset-0 opacity-80"></div>
+                    <div style="background-image: url('./assets/app/images/cellejobsbg.png');" class="hero-bg bg-[length:auto_1500px] bg-center md:bg-[length:auto_2000px] md:bg-center xl:bg-[length:auto_2600px] xl:bg-center bg-no-repeat z-20 absolute inset-0 opacity-80 hidden"></div>
                     <div class="absolute inset-0 z-0 bg-sky-100 opacity-80"></div>
                 </section>
                 <!-- Logo -->
