--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
                             </li>
                             <li class="static">
                                 <a href="./job.html" class="nav-item text-sm leading-6 text-center font-medium text-gray-900 hover:text-primary-500 transition">
-                                    <span class="relative py-1.5 inline-block">Arbeitgeber in Celler</span>
+                                    <span class="relative py-1.5 inline-block">Arbeitgeber in Celle</span>
                                 </a>
                                 <!-- MEGA MENU -->
                                 <ul class="dropdown-menu mega-menu">
@@ -854,7 +854,7 @@
                                     <li>
                                         <div class="flex items-center">
                                             <a href="./job.html" class="nav-item -mx-3 block rounded-lg px-3 py-2 text-base leading-7 text-gray-900 hover:text-primary-500 transition flex-1 min-w-1 w-full">
-                                                <span class="relative py-1.5 inline-block">Arbeitgeber in Celler</span>
+                                                <span class="relative py-1.5 inline-block">Arbeitgeber in Celle</span>
                                             </a>
                                             <div class="toggle-mobile-submenu flex w-8 h-8 justify-center items-center cursor-pointer text-gray-700">
                                                 <svg
